reproduce live failure